# mcp-experiments

./: CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: main.yml
dotnet/: Dockerfile  PuzzleSolver.sln
dotnet/src/PuzzleSolver.Benchmarks/: Configuration.cs  NumbersGameBenchmarks.cs  Program.cs  PuzzleSolver.Benchmarks.csproj
dotnet/src/PuzzleSolver.BreadthFirstSearch/: BreadthFirstSearch.cs  PuzzleSolver.BreadthFirstSearch.csproj  StateTraversal.cs
dotnet/src/PuzzleSolver.Common/: IFormatter.cs
dotnet/src/PuzzleSolver.DepthFirstSearch/: DepthFirstSearch.cs  IterativeDeepeningDepthFirstSearch.cs  IterativeDepthFirstSearch.cs  PuzzleSolver.DepthFirstSearch.csproj
dotnet/src/PuzzleSolver.Haystack/: HaystackResult.cs  Magnet.cs
dotnet/src/PuzzleSolver.MCPServer/: HaystackFindResultFormatter.cs  MarkdownSolverResultFormatter.cs  Program.cs  PuzzleSolver.MCPServer.csproj
dotnet/src/PuzzleSolver.MCPServer/Resources/: Numbers.cs
dotnet/src/PuzzleSolver.MCPServer/Tools/: EchoTool.cs  HaystackTool.cs  NumberGameTool.cs
dotnet/src/PuzzleSolver.NumbersGame/: Board.cs  BoardBuilder.cs  BoardEqualityComparer.cs  BoardRules.cs  CsvBoardFormatter.cs  IFormatter.cs  IllegalBoardException.cs  MathematicalOperation.cs  Number.cs  NumberComparer.cs  Operator.cs  PossibleAction.cs  PuzzleSolver.NumbersGame.csproj  Solution.cs  Solver.cs  SolverResult.cs  StateTraversalExtensions.cs  Target.cs
dotnet/src/PuzzleSolver.Search/: ISearch.cs  StateTraversal.cs
dotnet/tests/PuzzleSolver.Haystack.Tests/: MagnetTests.cs  PuzzleSolver.Haystack.Tests.csproj
dotnet/tests/PuzzleSolver.MCPServer.Tests/: PuzzleSolver.MCPServer.Tests.csproj
dotnet/tests/PuzzleSolver.NumbersGame.Test/: BoardTests.cs  PuzzleSolver.NumbersGame.Test.csproj  SolverTests.cs  TargetTests.cs
python/: .gitignore  Dockerfile  board.py  board_rules.py  breadth_first_search.py  exceptions.py  find_result.py  haystack_find_result_formatter.py  magnet.py  main.py  markdown_solver_result_formatter.py  mathematical_operation.py  number.py  operators.py  predicate.py  pyproject.toml  solution.py  solution_step.py  solve_instruction.py  solver.py  solver_result.py  state_traversal.py  target.py  test_board.py  test_solver.py  test_target.py  tox.ini
sandbox/: mcp.json
typescript/: Dockerfile  package-lock.json  package.json  tsconfig.json
