[project]
name = "puzzle-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]  # pycodestyle, pyflakes, isort, warnings, pyupgrade, bugbear, simplify

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
