[project]
name = "puzzle-solver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.12.2",
]

[tool.setuptools]
py-modules = [
    "board", "board_rules", "breadth_first_search", "exceptions", "main",
    "markdown_solver_result_formatter", "mathematical_operation", "number",
    "operators", "predicate", "solution", "solution_step", "solve_instruction",
    "solver", "solver_result", "state_traversal", "target"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
    "mypy>=1.8.0",
    "tox>=4.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]  # pycodestyle, pyflakes, isort, warnings, pyupgrade, bugbear, simplify

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
